<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Celestial Positions</string>
    <string name="localTimeLabel">"Local Time: "</string>
    <string name="utcLabel">"UTC: "</string>
    <string name="altitude">Alt.</string>
    <string name="azimuth">Azmt.</string>
    <string name="commonName">name</string>
    <string name="hourAngle">H.A.</string>
    <string name="declination">Dec.</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="gps" translatable="false">GPS</string>
    <string name="locationSettings">Observation Site Settings</string>
    <string name="messier_objects">Messier Objects</string>
    <string name="stars">Stars</string>
    <string name="inGettingLocation">In getting location information…</string>
    <string name="locationDataRetrieved">Location data retrieved.</string>
    <string name="invalidValue">Invalid value</string>
    <string name="pleaseCheckIfGPSIsOn">Please Check if GPS is on.</string>
    <string name="signedThreeDigit" translatable="false">%+3d°</string>
    <string name="latitudeHint" translatable="false">+23.4567</string>
    <string name="longitudeHint" translatable="false">+123.456</string>
    <string name="checkAppLvlPermission">Please check the app-level permissions to access from %s</string>
    <string name="unsignedThreeDigit" translatable="false">%3d°</string>
    <string name="app_license" tools:ignore="Typos">Copyright 2020-2026 Yasuhiro Yamakawa &lt;withlet11@gmail.com&gt;\n\n
        Permission is hereby granted, free of charge, to any person obtaining a copy of this
        software and associated documentation files (the "Software"), to deal in the Software
        without restriction, including without limitation the rights to use, copy, modify, merge,
        publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons
        to whom the Software is furnished to do so, subject to the following conditions:\n\n
        The above copyright notice and this permission notice shall be included in all copies or
        substantial portions of the Software.\n\n
        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
        INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR
        PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE
        FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
        OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
        DEALINGS IN THE SOFTWARE. </string>
    <string name="license">License</string>
    <string name="opensource_licenses">Open Source Licenses</string>
    <string name="open_cluster">OC</string>
    <string name="globular_cluster">GC</string>
    <string name="diffuse_nebula">DN</string>
    <string name="planetary_nebula">PN</string>
    <string name="supernova_remnant">SR</string>
    <string name="galaxy">GX</string>
    <string name="modify">modify</string>
    <string name="pleaseAuthorizeLocationPermissions">Please authorize location permissions</string>
    <string name="approve">Approve</string>
    <string name="signed_value" translatable="false">%+f</string>
    <string name="details" translatable="false">Details</string>
</resources>